   - ITreeAdder: fix columns adding (todo #1190).
   - LedgerClose: fix typo.
   - OpeTemplatePage: fix row activation.
   - OpeTemplateSelect: fix missing getter.
   - OpeTemplateStore: fix row insertion (todo #1189).
   - PeriodClose: fix the 'archive accounts' user preference (todo #1205).
   - RecurrentModel: fix update on OpeTemplate mnemmonic modification (todo #1203).
   - TVBin: Fix sort on incomplete rows (todo #1199).
   - AccountSelect, OpeTemplateSelect: fix columns visibility propagation (todo #1215).

 Other changes:

   - AccountSelect, OpeTemplateSelect: homogeneize UIs.
   - EntryListview, EntryStore: new classes.
   - myIActionMap, myAccelGroup: simplify code and review interface.
   - All collections: are no more sorted (todo #1208).
   - Object classes: review xxx_use_yyy() usage (todo #1207).
   - ofaActionPage: new ofaPage-derived class.
   - ofaPanedPage: new ofaPage-derived class.
   - ofaRateStore, ofaRateTreeview: new classes.
   - RecurrentManagePage: renamed to RecurrentModelPage (todo #1211).
   - All stores take advantage of hub as a private variable (todo #1216).
   - Normalize virtual method names (todo #1218).
   - Review IStore interface, ListStore and TreeStore implementations (todo #1198).

-----------------------------------------------------------------------
 Version 0.59
 ============

 Released on 2016-09-01
  
 New features and improvements:

   - RecurrentOperation: DB Model v4.
   - Rename the application to Open Firm Accounting (todo #1164).
   - BatImport: add a completeness check on imported lines.
   - BatTreeview: add a Notes indicator (todo #1157).
   - BatTreeview: make the treeview sortable (todo #1167).
   - ClassPage: add a Notes indicator (todo #1157).
   - ClassPage: make the treeview sortable (todo #1167).
   - CurrencyPage: add a Notes indicator (todo #1157).
   - CurrencyPage: make the treeview sortable (todo #1167).
   - LedgerPage: add a Notes indicator (todo #1157).