@@ -62,6 +62,7 @@
    - OpeTemplateStore: fix row insertion (todo #1189).
    - PeriodClose: fix the 'archive accounts' user preference (todo #1205).
    - RecurrentModel: fix update on OpeTemplate mnemmonic modification (todo #1203).
+   - RecurrentModel: fix update on 'never' periodicity.
    - TVBin: Fix sort on incomplete rows (todo #1199).
    - AccountSelect, OpeTemplateSelect: fix columns visibility propagation (todo #1215).
 
